Added more bounds to keep model from breaking

--- a/models/Luci/config.json
+++ b/models/Luci/config.json
@@ -141,7 +141,8 @@
         {
             "name": "Neck",
             "texture": "textures/Neck.png",
-            "mesh": "meshes/square.json"
+            "mesh": "meshes/square.json",
+            "deformers": ["deformers/neckPosition.json"]
         },
         {
             "name": "Back Clothing",
